--- a/pages/index.html
+++ b/pages/index.html
@@ -12,12 +12,12 @@
         
         <header>
             <span class="material-symbols-outlined large">sentiment_satisfied</span>
-            <h2>Satisfaying.you</h2>
+            <span>Satisfaying.you</span>
         </header>
 
         <div class="container">
             <div id="login-title">
-                <h3>Fazer login</h3>
+                <span>Fazer login</span>
             </div>
             <form action="">
             <div class="inputs">
