--- a/pages/recuperarSenha.html
+++ b/pages/recuperarSenha.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Satisfaying.you</title>
+        <link rel="stylesheet" href="../css/recuperarSenha.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Averia+Libre&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            
+            <span class="material-symbols-outlined large">sentiment_satisfied</span>
+            <span>Satisfaying.you</span>
         </header>
-        <div>
 
+        <div class="container">
+            <div class="title">
+                <span class="redefinir-senha">Redefina sua senha</span>
+                <span>Digite o seu e-mail para recuperação</span>
+            </div>
+            <form action="">
+                <div class="input">
+                    <label for="email">E-mail</label>
+                    <input type="email" name="email" id="email" placeholder="Digite seu e-mail">
+                </div>
+                <div class="error">
+                    <span>Formato inválido de e-mail</span>
+                </div>
+                <div class="recuperar">
+                    <button type="submit">Recuperar</button>
+                </div>
+            </form>
         </div>
     </body>
 </html>
+<!--  -->
