atualizando páginas e incrementando a página de agradecimentos

--- a/pages/agradecimento.html
+++ b/pages/agradecimento.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Satisfaying.you</title>
+        <link rel="stylesheet" href="../css/agradecimento.css">
+        <link href="https://fonts.googleapis.com/css2?family=Averia+Libre&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            
+            <a href="">Sair</a>
         </header>
         <div>
-
+            <span>Obrigado por participar da pesquisa!</span>
+            <span>Aguardamos você no próximo ano!</span>
         </div>
+
+        <footer class="rodape">
+            <span>Você será redirecionado em 3 segundos...</span>
+            <span>Aguarde ou <a href="#">clique aqui</a></span>
+        </footer>
     </body>
 </html>
