elaboração da página "acoespesquisa" e atualização do head das páginas "index", "recuperarsenha" e "agradecimentos".

--- a/pages/agradecimento.html
+++ b/pages/agradecimento.html
@@ -7,16 +7,16 @@
     </head>
     <body>
         <header>
-            <a href="">Sair</a>
+            <a href="index.html">Sair</a>
         </header>
         <div>
             <span>Obrigado por participar da pesquisa!</span>
             <span>Aguardamos você no próximo ano!</span>
         </div>
 
-        <footer class="rodape">
+        <footer>
             <span>Você será redirecionado em 3 segundos...</span>
-            <span>Aguarde ou <a href="#">clique aqui</a></span>
+            <span>Aguarde ou <a href="acoesPesquisa.html">clique aqui</a></span>
         </footer>
     </body>
 </html>
