--- a/pages/recuperarSenha.html
+++ b/pages/recuperarSenha.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <header>
-            <span class="material-symbols-outlined large">sentiment_satisfied</span>
+            <div class="logo">
+                <span class="material-symbols-outlined large">sentiment_satisfied</span>
+            </div>
             <span>Satisfaying.you</span>
         </header>
 
@@ -27,7 +29,7 @@
                     <span>Formato inválido de e-mail</span>
                 </div>
                 <div class="recuperar">
-                    <button type="submit">Recuperar</button>
+                    <a href="index.html">Recuperar</a>
                 </div>
             </form>
         </div>
