--- a/pages/acoesPesquisa.html
+++ b/pages/acoesPesquisa.html
@@ -2,19 +2,46 @@
 <html>
     <head>
         <title>Satisfaying.you</title>
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="../css/acoesPesquisa.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link href="https://fonts.googleapis.com/css2?family=Averia+Libre&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <span class="material-symbols-outlined large">sentiment_satisfied</span>
-            <h2>Satisfaying.you</h2>
+            <div class="icon">
+                <div id="logo">
+                    <span class="material-symbols-outlined large">sentiment_satisfied</span>
+                </div>
+                <span>Satisfaying.you</span>
+            </div>
+
+            <div class="link">
+                <a href="index.html">Sair</a>
+            </div>
         </header>
 
-        <div class="container">
-        <div>
+        <div class="container-pai">
+            <a href="https://www.google.com" class="container-1">
+                <div class="icones">
+                    <span class="material-symbols-outlined">contract_edit</span>
+                </div>
+                <span>Modificar</span>
+                </a>
+
+            <a href="https://www.google.com" class="container-1">
+                <div class="icones">
+                    <span class="material-symbols-outlined">library_add_check</span>
+                </div>
+                <span>Coletar dados</span>
+            </a>
+
+            <a href="https://www.google.com" class="container-1">
+                <div class="icones">
+                    <span class="material-symbols-outlined">donut_large</span>
+                </div>
+                <span>Relatório</span>
+            </a>
 
         </div>
     </body>
