--- a/pages/index.html
+++ b/pages/index.html
@@ -4,14 +4,16 @@
         <title>Satisfaying.you</title>
         <link rel="stylesheet" href="../css/index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link href="https://fonts.googleapis.com/css2?family=Averia+Libre&display=swap" rel="stylesheet">
     </head>
     
     <body>
         
         <header>
-            <span class="material-symbols-outlined large">sentiment_satisfied</span>
+            <div class="logo">
+                <span class="material-symbols-outlined">sentiment_satisfied</span>
+            </div>
             <span>Satisfaying.you</span>
         </header>
 
@@ -30,11 +32,11 @@
             </div>
             <div class="error">
                 <span>E-mail e/ou senha inválidos</span>
-                <a href="#">Esqueci minha senha</a>
+                <a href="recuperarSenha.html">Esqueci minha senha</a>
             </div>
             <div class="entrar">
                 <a href="#">Criar conta</a>
-                <button type="submit">Entrar</button>
+                <button type="submit" href="#">Entrar</button>
             </div>
             </form>
         </div>
