--- a/pages/modificarPesquisa.html
+++ b/pages/modificarPesquisa.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Satisfaying.you</title>
-    <link rel="stylesheet" href="../css/novaPesquisa.css">
+    <link rel="stylesheet" href="../css/modificarPesquisa.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="https://fonts.googleapis.com/css2?family=Averia+Libre&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="icon">
@@ -15,15 +18,22 @@
             </div>
             <span>Satisfaying.you</span>
         </div>
-
         <div class="link">
+            <div class="link-apagar">
+                <div class="img-apagar">
+                    <img src="/assets/img/delete_FILL0_wght400_GRAD0_opsz48 1.svg" alt="">
+                </div>
+                <div id="apagar">
+                    <a class="button-apagar" href="novaPesquisa.html">Apagar</a>
+                </div>
+            </div>
             <a href="index.html">Sair</a>
         </div>
     </header>
 
     <div class="container">
         <div id="pesquisa-title">
-            <span>Criar nova pesquisa de satisfação</span>
+            <span>Atualizar os dados da pesquisa</span>
         </div>
         <form action="">
             <div class="inputs">
@@ -48,11 +58,11 @@
             <div class="footer">
                 <div class="imagem-preview"></div>
                 <div class="criar">
-                    <button type="submit" class="enviar" href="#">Criar</button>
+                    <button type="submit" class="enviar" href="#">Salvar</button>
                 </div>
             </div>
         </form>
     </div>
-
 </body>
+
 </html>
