--- a/pages/Relatorio.html
+++ b/pages/Relatorio.html
@@ -127,7 +127,7 @@
         </header>
         <main>
             <section>
-                <img src="./images/chart.png"> </img>
+                <img src="../assets/img/chart.png"> </img>
                 <div id='legenda_relatorio'>
                     <div class="item_legenda">
                         <div class="label_box_realtorio color_sad"></div>
