--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
             <div id="login-title">
                 <span>Fazer login</span>
             </div>
-            <form action="">
+            <form action="home.html">
             <div class="inputs">
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email" placeholder="Digite seu e-mail">
@@ -35,8 +35,8 @@
                 <a href="recuperarSenha.html">Esqueci minha senha</a>
             </div>
             <div class="entrar">
-                <a href="#">Criar conta</a>
-                <button type="submit" href="#">Entrar</button>
+                <a href="NovaConta.html">Criar conta</a>
+                <button type="submit" href="home.html">Entrar</button>
             </div>
             </form>
         </div>
