--- a/pages/modificarPesquisa.html
+++ b/pages/modificarPesquisa.html
@@ -31,11 +31,11 @@
         </div>
     </header>
 
-    <div class="container">
+    <main class="container">
         <div id="pesquisa-title">
             <span>Atualizar os dados da pesquisa</span>
         </div>
-        <form action="">
+        <form action="home.html">
             <div class="inputs">
                 <label for="nome">Nome da pesquisa</label>
                 <input type="text" name="nome" id="nome" placeholder="Digite o nome da pesquisa">
@@ -55,14 +55,14 @@
                     <label for="imagem">Escolher arquivo</label>
                 </div>
             </div>
-            <div class="footer">
+            <footer class="footer">
                 <div class="imagem-preview"></div>
                 <div class="criar">
-                    <button type="submit" class="enviar" href="#">Salvar</button>
+                    <button type="submit" class="enviar" href="home.html">Salvar</button>
                 </div>
-            </div>
+            </footer>
         </form>
-    </div>
+    </main>
 </body>
 
 </html>
