--- a/pages/novaPesquisa.html
+++ b/pages/novaPesquisa.html
@@ -21,11 +21,11 @@
         </div>
     </header>
 
-    <div class="container">
+    <main class="container">
         <div id="pesquisa-title">
             <span>Criar nova pesquisa de satisfação</span>
         </div>
-        <form action="">
+        <form action="home.html">
             <div class="inputs">
                 <label for="nome">Nome da pesquisa</label>
                 <input type="text" name="nome" id="nome" placeholder="Digite o nome da pesquisa">
@@ -48,11 +48,11 @@
             <div class="footer">
                 <div class="imagem-preview"></div>
                 <div class="criar">
-                    <button type="submit" class="enviar" href="#">Criar</button>
+                    <button type="submit" class="enviar" href="home.html">Criar</button>
                 </div>
             </div>
         </form>
-    </div>
+    </main>
 
 </body>
 </html>
