--- a/pages/acoesPesquisa.html
+++ b/pages/acoesPesquisa.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link href="https://fonts.googleapis.com/css2?family=Averia+Libre&display=swap" rel="stylesheet">
+        <script src="../function.js"></script>
     </head>
     <body>
         <header>
@@ -22,21 +23,21 @@
         </header>
 
         <div class="container-pai">
-            <a href="https://www.google.com" class="container-1">
+            <a href="modificarPesquisa.html" class="container-1">
                 <div class="icones">
                     <span class="material-symbols-outlined">contract_edit</span>
                 </div>
                 <span>Modificar</span>
                 </a>
 
-            <a href="https://www.google.com" class="container-1">
+            <a href="Coleta.html" class="container-1">
                 <div class="icones">
                     <span class="material-symbols-outlined">library_add_check</span>
                 </div>
                 <span>Coletar dados</span>
             </a>
 
-            <a href="https://www.google.com" class="container-1">
+            <a href="Relatorio.html" class="container-1">
                 <div class="icones">
                     <span class="material-symbols-outlined">donut_large</span>
                 </div>
