--- a/pages/Coleta.html
+++ b/pages/Coleta.html
@@ -40,12 +40,24 @@
             gap: 10rem;
         }
 
+        @media (max-width: 800px) {
+            section {
+            display: flex;
+            flex-direction: column;
+            margin-left: auto;
+            margin-right: auto;
+            gap: 2rem;
+        }
+        }
+
+        @media (min-width: 800px) {
         section {
             display: flex;
             flex-direction: row;
             margin-left: auto;
             margin-right: auto;
-            gap: 8rem;
+            gap: 4rem;
+        }
         }
 
         h1 {
